tests/error/ptr_arg_array.gw
#! [contains] must be defined with empty
funptr void my_func (int[4] i);
